# OOP_MAI_2025

./: .gitignore  CMakeLists.txt  README.md
lab_01/: CMakeLists.txt
lab_01/src/: function.cpp  function.h  main.cpp
lab_01/tests/: test_cases.cpp
lab_02/: CMakeLists.txt
lab_02/src/: classes.cpp  classes.h  main.cpp
lab_02/tests/: test_cases.cpp
lab_03/: CMakeLists.txt
lab_03/src/: classes.cpp  classes.h  main.cpp
lab_03/tests/: test_cases.cpp
